# measuring

./: .gitignore  CLAUDE.md  README.md  TESTING.md  babyface.sh  ff400.sh  functions.sh  osm-start.sh  pyproject.toml  setup.py  vol.sh
ac/: constants.py  test.py
ac/client/: CLAUDE.md  ac.py  parse.py  plotting.py
ac/server/: CLAUDE.md  audio.py  engine.py  jack_calibration.py  transfer.py
ac/ui/: CLAUDE.md  app.py  spectrum.py  sweep.py  transfer.py
beyer/: 449350_34804_0Grad.txt  449350_34804_90Grad.txt
ds/: README.md  ai.py  cli.py  config.py  context.py  diff.py  files.py  notes.py  scraper.py  session.py
scripts/: babyface.sh  config.sh  osm-start.sh
tests/: test_analysis.py  test_conversions.py  test_parse.py  test_server_client.py
thd_tool/: ac.py  config.py  dmm.py  jack_calibration.py  jack_measure.py  parse.py  plotting.py  remote.py  server.py
thd_tool/client/: CLAUDE.md  ac.py  io.py  parse.py  tui.py
thd_tool/gpio/: gpio.py
thd_tool/server/: audio.py  jack_calibration.py  server.py
thd_tool/ui/: spectrum.py  sweep.py
