[build-system]
requires = ["setuptools>=64,<75"]
build-backend = "setuptools.build_meta"

[project]
name = "audiocli"
version = "0.3.0a1"
description = "CLI toolkit for audio bench measurements — THD, THD+N, sweeps, transfer functions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "sounddevice",
    "numpy",
    "scipy",
    "matplotlib",
    "pyzmq",
    "pyserial",
]

[project.urls]
Homepage = "https://github.com/mkovero/ac"
Source = "https://github.com/mkovero/ac"

[project.optional-dependencies]
dev = ["pytest"]
gui = ["pyqtgraph>=0.13"]
jack = ["jack-client"]

[project.scripts]
ac = "ac.client.ac:main"
thd = "ac.cli:main"
ds = "ds.cli:main"

[tool.setuptools]
packages = { find = {} }
